
Sat Jun 22 11:37:25 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* icall.c: fix off-by-one in Assembly.GetTypes() reported by bob@karr.ath.cx.

2002-06-21  Miguel de Icaza  <miguel@ximian.com>

	* image.c (do_mono_image_open): Initialize reference count,
	otherwise we leak the MonoImage.

Fri Jun 21 19:16:47 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: small tweak to handle self-hosting.

Thu Jun 20 23:28:13 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: fix type name parse code.

Thu Jun 20 19:24:32 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: break out of the loop.
	* image.c: special case corlib.

Thu Jun 20 16:43:29 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: add all the custom attrs at the end to ensure the
	ctors have been properly initialized when the attributes are defined
	in the current assembly.

Thu Jun 20 13:46:40 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: handle correctly multiple-nested types.

Thu Jun 20 11:49:00 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* row-indexes.h: fix typos.
	* reflection.c: adjust for typos and fix method_def_or_ref
	encoding in MethodImpl table.

Wed Jun 19 21:57:30 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: fix entry point patching (thanks Serge!).

2002-06-18  Dietmar Maurer  <dietmar@ximian.com>

	* verify.c: add check for System.Exception

Mon Jun 17 20:23:23 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* image.c, class.c: minifix for code just c&p'ed.
	* reflection.c: warning fix.
	* object.h, loader.h, domain.c: load also StringBuilder.

Mon Jun 17 17:29:40 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* marshal.h, marshal.c: some support code to handle complex marshaling.

Mon Jun 17 16:32:56 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* class.h, class.c, reflection.c: handle ignorecase in GetType ().
	Better signatures with vtable error dump.

Mon Jun 17 16:13:35 CEST 2002 Paolo Molaro <lupus@ximian.com>
